--- a/Project.css
+++ b/Project.css
@@ -1,14 +1,10 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: white;
-}
-.containerLeft {
+/* .containerLeft {
   width: 20px;
   height: 30px;
 }
 .project-title {
   text-align: center;
-  margin-top: 50px; /* Custom space from the top */
+  margin-top: 50px; 
 }
 .projectName {
   margin-top: 40px !important;
@@ -44,22 +40,21 @@ body {
   width: 620px;
   position: relative;
   height: 550.3px;
-  margin-left: 75px; /*Margin of image from left */
-  margin-top: 11.1px; /* Custom space from the top */
+  margin-left: 75px; 
+  margin-top: 11.1px; 
 }
 
 .ProjectRight {
   right: 16%;
-  margin-top: 57.1px;
+  margin-top: 60px;
   width: 27%;
-  height: 550.3px;
+  height: 530.3px;
   position: absolute;
-  /* overflow-x: none; */
+  overflow-x: none;
   margin-left: 300px;
   background-color: rgb(248, 242, 242);
 }
 .scroll-image {
-  /* DO NOT EDIT BELOW DONE */
   padding-left: 25px;
   height: 38.79%;
   padding-right: 25px;
@@ -70,4 +65,184 @@ body {
 .scroll-image:hover {
   background-color: #ff0066;
   color: white;
+} */
+
+/* Base styles */
+.containerLeft {
+  width: 20px;
+  height: 30px;
+}
+
+.project-title {
+  text-align: center;
+  margin-top: 50px; /* Custom space from the top */
+}
+
+.projectName {
+  margin-top: 40px !important;
+  color: #ff0066;
+  font-size: 19px;
+}
+
+#h1Project {
+  font-size: 46px;
+}
+
+.h2Project {
+  padding-top: 36px;
+  margin-top: 10px;
+}
+
+.Projectcontainer {
+  margin-top: 2%;
+  margin-left: 5%;
+  height: 65%;
+  width: 50%;
+  position: relative;
+  z-index: 1;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.ProjectLeft {
+  left: 0%;
+}
+
+.container-image {
+  display: flex;
+}
+
+#imageDisplay {
+  padding-bottom: 20px !important;
+  width: 620px;
+  position: relative;
+  height: 550.3px;
+  margin-left: 75px; /* Margin of image from left */
+  margin-top: 11.1px; /* Custom space from the top */
+}
+
+.ProjectRight {
+  right: 16%;
+  margin-top: 60px;
+  width: 27%;
+  height: 530.3px;
+  position: absolute;
+  overflow-x: none;
+  margin-left: 300px;
+  background-color: rgb(248, 242, 242);
+}
+
+.scroll-image {
+  padding-left: 25px;
+  height: 38.79%;
+  padding-right: 25px;
+  text-align: left;
+  margin-top: -10%;
+  cursor: pointer;
+}
+
+.scroll-image:hover {
+  background-color: #ff0066;
+  color: white;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .project-title {
+    margin-top: 30px;
+  }
+
+  .projectName {
+    margin-top: 20px !important;
+    font-size: 16px;
+  }
+
+  #h1Project {
+    font-size: 36px;
+  }
+
+  .h2Project {
+    padding-top: 20px;
+    margin-top: 5px;
+  }
+
+  .Projectcontainer {
+    margin-top: 2%;
+    margin-left: 2%;
+    height: auto;
+    width: 96%;
+    padding-top: 10px;
+  }
+
+  #imageDisplay {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 10px;
+  }
+
+  .ProjectRight {
+    position: relative;
+    right: 0;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+  }
+
+  .scroll-image {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .project-title {
+    margin-top: 20px;
+  }
+
+  .projectName {
+    margin-top: 10px !important;
+    font-size: 14px;
+  }
+
+  #h1Project {
+    font-size: 28px;
+  }
+
+  .h2Project {
+    padding-top: 10px;
+    margin-top: 0;
+  }
+
+  .Projectcontainer {
+    margin-top: 1%;
+    margin-left: 1%;
+    height: auto;
+    width: 98%;
+    padding-top: 5px;
+  }
+
+  #imageDisplay {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 5px;
+  }
+
+  .ProjectRight {
+    position: relative;
+    right: 0;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+    margin-top: 15px;
+  }
+
+  .scroll-image {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 5px;
+  }
 }
