--- a/homepage.css
+++ b/homepage.css
@@ -1,10 +1,6 @@
-body {
-  font-family: Arial, sans-serif;
-}
-
 .split {
   height: 100%;
-  width: 725px;
+  width: 715px;
   /* IN THIS SECTION ADJUST SIZE  */
   position: relative;
   z-index: 1;
@@ -221,4 +217,32 @@ body {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+  .split {
+    width: 100%; /* Adjusted for responsiveness */
+    padding-top: 10px; /* Adjusted for responsiveness */
+  }
+
+  .right {
+    width: 100%; /* Adjusted for responsiveness */
+  }
+
+  .popupModel {
+    width: 90%; /* Adjusted for responsiveness */
+    margin-left: 5%; /* Adjusted for responsiveness */
+  }
+
+  .popupModel input[type="text"] {
+    width: 90%; /* Adjusted for responsiveness */
+  }
+
+  .contactUsbtn {
+    width: 90%; /* Adjusted for responsiveness */
+  }
+
+  .input-container label {
+    font-size: 16px; /* Adjusted for responsiveness */
+  }
 }
